[package]
name    = "bb_logger"
authors = ["Luxzi <luxzi@pm.me>"] 
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"

[lib]
name       = "bb_logger"
edition    = "2021"
crate-type = ["rlib"]